# bda

./: README.md  pyproject.toml
bda/chap2/: note.ipynb
bda/chap5/: note.ipynb
