[tool.poetry]
name = "bda"
version = "0.1.0"
description = ""
authors = ["TakuKaneda <kndtaku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.4"
pandas = "^2.2.2"
matplotlib = "^3.9.1.post1"
scipy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
